--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
