--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -34,6 +34,7 @@ jobs:
 
       # SonarCloud Scan
       - name: SonarCloud
+        if: always()
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 
