--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -31,6 +31,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
         run: npm ci
 
+      # SONAR CLOUD
       - name: SonarCloud
         if: always()
         uses: actions/checkout@v3
