--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -67,7 +67,12 @@ jobs:
             git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           fi
           cd ${{secrets.NAME_REPO_GIT}}
-          git checkout develop
+
+          current_branch=$(git rev-parse --abbrev-ref HEAD)
+          if [ "$current_branch" != "develop" ]; then
+            git checkout develop
+          fi
+
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
           cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
