--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -18,10 +18,8 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
-      - name: install npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-        run: npm ci
+      - name: install pnpm
+        run: pnpm install --frozen-lockfile
 
       # SCA
       
