--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -18,18 +18,11 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
   
-      - name: run npm audit
-        uses: oke-py/npm-audit-action@v2
-        with:
-          audit_level: low
-          create_issues: true
-          github_token: ${{ secrets.TOKEN_GIT }}
-          issue_labels: vulnerability
+      - name: run pnpm audit
+        run: pnpm audit
 
-      - name: install npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-        run: npm ci
+      - name: install pnpm
+        run: pnpm install --frozen-lockfile
 
       # SONAR CLOUD
       - name: SonarCloud
