--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -17,6 +17,14 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
+      
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
+            - args: [--global, gulp, prettier, typescript]
 
       - name: install pnpm
         run: pnpm install --frozen-lockfile
