--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -17,11 +17,13 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
+      
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
 
-      - name: install npm ci
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
-        run: npm ci
+      - name: install pnpm
+        run: pnpm install --frozen-lockfile
 
       # SCA
       
