--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -46,21 +46,37 @@ jobs:
       - name: Upload Test results
         uses: actions/upload-artifact@v4
         with:
-           name: Depcheck report
-           path:  ${{github.workspace}}
+          name: Depcheck report
+          path:  ${{github.workspace}}
 
       - name: Save Deṕcheck Report on Branch
         if: always()
         run: |
           git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
           cd ${{secrets.NAME_REPO_GIT}}
-          git fetch && git checkout ${GITHUB_REF#refs/heads/}
+
+          echo "GITHUB_REF: ${GITHUB_REF}"
+
+          if [[ "${GITHUB_REF}" == refs/heads/* ]]; then
+            BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          elif [[ "${GITHUB_REF}" == refs/pull/*/merge ]]; then
+            BRANCH_NAME="refs/pull/${GITHUB_REF#refs/pull/}"
+          else
+            echo "Unsupported GITHUB_REF: ${GITHUB_REF}"
+            exit 1
+          fi
+
+          echo "BRANCH_NAME: ${BRANCH_NAME}"
+
+          git fetch
+          git checkout ${BRANCH_NAME}
+          
           current_date=$(date +%Y-%m-%d)
           rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
           cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
           git add .
           git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin ${GITHUB_REF#refs/heads/}
+          git push origin ${BRANCH_NAME}
       
       - name: Save Depcheck Report on Develop
         if: always()
