--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=tcc-lucas-dafne_tcc-bank-api
 sonar.organization=tcc-lucas-dafne
 
+sonar.tsql.file.suffixes=sql,tsql 
+sonar.plsql.file.suffixes=pks,pkb
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=tcc-bank-api
 #sonar.projectVersion=1.0
