--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -6,8 +6,10 @@ on:
 
 jobs:
   sca_depcheck:
-    name: 'Owasp Dependency Check'
+    name: 'SCA'
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
 
     steps:
       - name: Checkout Repository
@@ -17,15 +19,27 @@ jobs:
         run: |
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
-      
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8
 
-      - name: install pnpm
-        run: pnpm install --frozen-lockfile
+      - name: install npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
+        run: npm ci
 
       # SCA
+      # SNYK
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=snyk.sarif
+
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk.sarif
+          category: my-analysis-tool
       
       # OWASP DEPENDENCY CHECK
       - name: Depcheck
@@ -34,51 +48,29 @@ jobs:
         with:
           project: 'tcc-password-manager'
           path: './'
-          format: 'HTML'
-          out: '.'
+          format: 'ALL'
+          out: 'depcheck'
           args: >
-            # --failOnCVSS 7
             --enableRetired
-
-      - name: Check
-        run: ls
+            --nvdApiKey ${{ secrets.NVD_API_KEY }}
+      
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: depcheck/dependency-check-report.sarif
 
       - name: Upload Test results
         uses: actions/upload-artifact@v4
         with:
            name: Depcheck report
-           path:  ${{github.workspace}}
+           path:  ${{github.workspace}}/depcheck
 
-      - name: Save Deṕcheck Report on Branch
-        if: always()
-        run: |
-          git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          cd ${{secrets.NAME_REPO_GIT}}
-          git fetch && git checkout ${GITHUB_REF#refs/heads/}
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
-          cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin ${GITHUB_REF#refs/heads/}
-      
-      - name: Save Depcheck Report on Develop
-        if: always()
-        run: |
-          if [ ! -d "${{secrets.NAME_REPO_GIT}}" ]; then
-            git clone "https://x-access-token:${{secrets.TOKEN_GIT}}@github.com/tcc-lucas-dafne/${{secrets.NAME_REPO_GIT}}" ${{secrets.NAME_REPO_GIT}}
-          fi
-          cd ${{secrets.NAME_REPO_GIT}}
-
-          current_branch=$(git rev-parse --abbrev-ref HEAD)
-          if [ "$current_branch" != "develop" ]; then
-            git checkout develop
-          fi
-
-          current_date=$(date +%Y-%m-%d)
-          rm -rf reports/owasp_dependency_check/${current_date} && mkdir -p reports/owasp_dependency_check/${current_date}
-          cp -R ${{github.workspace}}/dependency-check-report.html reports/owasp_dependency_check/${current_date}
-          git add .
-          git commit -m "Adicionando relatório no repositório ${{ github.event.repository.name }} ${{ github.ref_name }} [skip ci]"
-          git push origin develop
-      
+      - name: PR comment with file
+        uses: thollander/actions-comment-pull-request@v2
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+        with:
+          message: |
+            Hello World!
+          filePath: Depcheck report.zip
+          pr_number: $PR_NUMBER
