--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -67,12 +67,12 @@ jobs:
            name: Depcheck report
            path:  ${{github.workspace}}/depcheck
 
-      - name: PR comment with file
-        uses: thollander/actions-comment-pull-request@v2
-        env:
-          PR_NUMBER: ${{ github.event.number }}
-        with:
-          message: |
-            Hello World!
-          filePath: Depcheck report.zip
-          pr_number: $PR_NUMBER
+      # - name: PR comment with file
+      #   uses: thollander/actions-comment-pull-request@v2
+      #   env:
+      #     PR_NUMBER: ${{ github.event.number }}
+      #   with:
+      #     message: |
+      #       Hello World!
+      #     filePath: Depcheck report.zip
+      #     pr_number: $PR_NUMBER
