--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -58,6 +58,7 @@ jobs:
           args: >
             --enableRetired
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
+            --pnpm /home/runner/setup-pnpm/node_modules/.bin/pnpm
       
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
