--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -3,6 +3,8 @@ name: SCA Tests
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [results]
 
 jobs:
   sca_depcheck:
@@ -47,17 +49,30 @@ jobs:
           category: my-analysis-tool
       
       # OWASP DEPENDENCY CHECK
+      # - name: Depcheck
+      #   uses: dependency-check/Dependency-Check_Action@main
+      #   id: Depcheck
+      #   with:
+      #     project: 'tcc-password-manager'
+      #     path: './pnpm-lock.yaml'
+      #     format: 'ALL'
+      #     out: 'depcheck'
+      #     args: >
+      #       --enableRetired
+      #       --nvdApiKey ${{ secrets.NVD_API_KEY }}
+
+      # OWASP DEPENDENCY CHECK
       - name: Depcheck
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
         with:
           project: 'tcc-password-manager'
-          path: './pnpm-lock.yaml'
-          format: 'ALL'
-          out: 'depcheck'
+          path: './'
+          format: 'HTML'
+          out: '.'
           args: >
             --enableRetired
-            --nvdApiKey ${{ secrets.NVD_API_KEY }}
+
       
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
