--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -22,12 +22,12 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
       
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8
+      # - uses: pnpm/action-setup@v4
+      #   with:
+      #     version: 8
 
-      - name: install pnpm
-        run: pnpm install --frozen-lockfile
+      # - name: install pnpm
+      #   run: pnpm install --frozen-lockfile
 
       - name: install npm
         run: npm install --frozen-lockfile
