--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -78,14 +78,13 @@ jobs:
 
       - name: Run OWASP Dependency-Check with pnpm
         run: |
-          docker run --rm \
-            -v $(pwd):/workspace \
-            -w /workspace \
-            owasp/dependency-check:latest \
-            sh -c "apk add --no-cache nodejs npm && npm install -g pnpm && pnpm install && dependency-check.sh --project 'tcc-password-manager' --out . --format HTML --enableRetired --pnpm /usr/local/bin/pnpm pnpm-lock.yaml"
+          docker pull owasp/dependency-check:latest
+              docker run --rm \
+              -v "$(pwd):/src" \ 
+              owasp/dependency-check:latest \
+              sh -c "apk add --no-cache nodejs npm && npm install -g pnpm && pnpm install && \
+              dependency-check.sh --project 'tcc-password-manager' --out /src --format HTML --enableRetired --pnpm /usr/local/bin/pnpm /src/pnpm-lock.yaml"
 
-
-      
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
         with:
