--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -80,10 +80,9 @@ jobs:
         run: |
           docker pull owasp/dependency-check:latest
           docker run --rm \
-            -v "$(pwd):/src" \ 
             owasp/dependency-check:latest \
             sh -c "apk add --no-cache nodejs npm && npm install -g pnpm && pnpm install && \
-            dependency-check.sh --project 'tcc-password-manager' --out /src --format HTML --enableRetired --pnpm /usr/local/bin/pnpm /src/pnpm-lock.yaml"
+            dependency-check.sh --project 'tcc-bank-api' --out '.' --format HTML --enableRetired --pnpm '/usr/local/bin/pnpm' --scan './pnpm-lock.yaml'"
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
