--- a/.github/workflows/ci_depcheck.yaml
+++ b/.github/workflows/ci_depcheck.yaml
@@ -45,11 +45,11 @@ jobs:
         with:
           args: --sarif-file-output=snyk.sarif
 
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: snyk.sarif
-          category: my-analysis-tool
+      # - name: Upload result to GitHub Code Scanning
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   with:
+      #     sarif_file: snyk.sarif
+      #     category: my-analysis-tool
       
       - name: install npm ci
         env:
