--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   tcc-bank-api:
     container_name: backend_tcc_bank
     build: .
+    environment: 
+      POSTGRES_HOST: tcc-bank-db
+    env_file: .env
     ports:
       - 3001:3001
-    environment: 
-      PORT: 3001
     volumes:
-      - ./:/code
-      - node_modules:/code/node_modules
+      - .:/app
+      - /app/node_modules
     networks: 
       - backend_tcc_bank
     depends_on:
@@ -19,17 +20,18 @@ services:
   tcc-bank-db:
     image: postgres:latest
     restart: always
+    ports:
+      - "5433:5432"
     environment:
-      POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       SECRET: ${SECRET}
-    ports:
-      - "5433:5432"
+      PGDATA: postgres_data:/var/lib/postgresql/data
+    env_file: .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./sql-scripts:/docker-entrypoint-initdb.d
+      - ./sql-scripts/init:/docker-entrypoint-initdb.d
     networks:
       - backend_tcc_bank
 
