--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -22,11 +22,9 @@ jobs:
         with:
           version: 8
 
-      - name: run pnpm audit
-        run: pnpm audit
+      - name: run npm audit
+        run: npm-audit
 
-      - name: install pnpm
-        run: pnpm install --frozen-lockfile
 
       # SONAR CLOUD
       - name: SonarCloud
