--- a/.github/workflows/ci_build_sast.yaml
+++ b/.github/workflows/ci_build_sast.yaml
@@ -18,13 +18,19 @@ jobs:
           git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
           git config --global user.name "${{secrets.GIT_USER_NAME}}"
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 8
-
+      # NPM AUDIT
       - name: run npm audit
-        run: npm-audit
+        uses: oke-py/npm-audit-action@v2
+        with:
+          audit_level: low
+          create_issues: true
+          github_token: ${{ secrets.TOKEN_GIT }}
+          issue_labels: vulnerability
 
+      - name: install npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GIT }}
+        run: npm ci
 
       # SONAR CLOUD
       - name: SonarCloud
