Update and rename cd_prod.yaml to prod.yaml

--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,4 +1,4 @@
-name: CD PROD
+name: PROD
 
 on: 
   push:
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "homolog-password-manager-api"
