--- a/.github/workflows/hml.yaml
+++ b/.github/workflows/hml.yaml
@@ -1,8 +1,12 @@
-name: CD PROD
+name: HOMOLOG
 
 on: 
   push:
-    branches: [main]
+    branches: [develop]
+  pull_request:
+    branches:
+      - develop
+    types: [ closed ]
 
 defaults:
   run:
@@ -16,13 +20,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "homolog-password-manager-api"
+          heroku_app_name: "homolog-tcc-bank-api"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
           docker_build_args: |
-            DB_URL_PROD
+            DB_URL
         env:
-          DB_URL: ${{ secrets.DB_URL_PROD }}
+          DB_URL: ${{ secrets.DB_URL_HML }}
