--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,8 +1,8 @@
-name: CD
+name: PROD
 
 on: 
   push:
-    branches: [develop]
+    branches: [main]
 
 defaults:
   run:
@@ -16,13 +16,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "homolog-password-manager-api"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
           docker_build_args: |
-            DB_URL
+            DB_URL_PROD
         env:
-          DB_URL: ${{ secrets.DB_URL_HML }}
+          DB_URL: ${{ secrets.DB_URL_PROD }}
