--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
     types: [ closed ]
+  push:
+    branches:
+      - main
+    types: [ closed ]
     
 jobs:
   release:
