--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
